# deepseek-distilled-on-sagemaker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: benchmark.py
scripts/: delete.py  deploy.py  inference.py
